Add new Ontology.Builder.addEdge and Ontology.Builder.addAxiom methods to aid with adding nodes, edges and properties in the correct order (ontologies typically having inverted directed edges) Add quick equivalence tests for phenol 2.0.3 Add phenol to new HpoComparisonTests Add new TestOntologyGraphs helper class Added local copy of hp.json to src/test/resources